; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_avio.c_ffurl_size.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_avio.c_ffurl_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AVSEEK_SIZE = common dso_local global i32 0, align 4
@SEEK_CUR = common dso_local global i32 0, align 4
@SEEK_END = common dso_local global i32 0, align 4
@SEEK_SET = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @ffurl_size(i32* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = load i32, i32* @AVSEEK_SIZE, align 4
  %8 = call i64 @ffurl_seek(i32* %6, i64 0, i32 %7)
  store i64 %8, i64* %5, align 8
  %9 = load i64, i64* %5, align 8
  %10 = icmp slt i64 %9, 0
  br i1 %10, label %11, label %28

11:                                               ; preds = %1
  %12 = load i32*, i32** %3, align 8
  %13 = load i32, i32* @SEEK_CUR, align 4
  %14 = call i64 @ffurl_seek(i32* %12, i64 0, i32 %13)
  store i64 %14, i64* %4, align 8
  %15 = load i32*, i32** %3, align 8
  %16 = load i32, i32* @SEEK_END, align 4
  %17 = call i64 @ffurl_seek(i32* %15, i64 -1, i32 %16)
  store i64 %17, i64* %5, align 8
  %18 = icmp slt i64 %17, 0
  br i1 %18, label %19, label %21

19:                                               ; preds = %11
  %20 = load i64, i64* %5, align 8
  store i64 %20, i64* %2, align 8
  br label %30

21:                                               ; preds = %11
  %22 = load i64, i64* %5, align 8
  %23 = add nsw i64 %22, 1
  store i64 %23, i64* %5, align 8
  %24 = load i32*, i32** %3, align 8
  %25 = load i64, i64* %4, align 8
  %26 = load i32, i32* @SEEK_SET, align 4
  %27 = call i64 @ffurl_seek(i32* %24, i64 %25, i32 %26)
  br label %28

28:                                               ; preds = %21, %1
  %29 = load i64, i64* %5, align 8
  store i64 %29, i64* %2, align 8
  br label %30

30:                                               ; preds = %28, %19
  %31 = load i64, i64* %2, align 8
  ret i64 %31
}

declare dso_local i64 @ffurl_seek(i32*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
